p3/shared/argo-target/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: wils-app
  ports:
    - protocol: TCP
      port: 88
      targetPort: 8888
