p3/shared/argo-target/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: 
  rules:
  - http:
      paths:
      - path: /wils-app
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 88
